simple/gohttp/deploy/env/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: PROJECT_NAME
spec:
  replicas: 10
